--- a/style.css
+++ b/style.css
@@ -103,15 +103,80 @@ text-align: left;
     margin-top: 10px;
 }
 
-/* footer */
-footer{
+/* contact area */
+.contact{
     width:90%;
     height: 200px;
     background-image: linear-gradient(to right, #ff634782 ,#ffc0cb00), url(./images/watch.png);
     background-repeat: no-repeat;
     background-size: cover;
-   margin:20px auto;
+    margin:20px auto;
+    margin-bottom: 100px;
+    border-radius: 5px;
 }
-.btn-footer{
-     margin-top:178px
+.contact h1{
+    color: #fff;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 47px;
+    text-align: left;
+    padding-top:30px ;
+    margin-left: 30px;
+
 }
+.btn-contact{
+     
+     border-radius: 5px;
+     margin-left: 30px;
+     padding: 15px 25px;
+     border: 0;
+     color: tomato;
+     font-weight: 700;
+}
+
+/* footer  area*/
+.footer-area{
+    width: 100%;
+    height: 450px;
+    display: flex;
+    justify-content: space-around;
+    background-color: black;
+}
+        .footer-item{
+            margin: 100px 200px 0px 100px;
+            padding: 20px;
+            color: #ffff
+            
+        }
+        .footer-description{
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 26px;
+            letter-spacing: 0em;
+            text-align: left;
+            margin-bottom: 20px;
+
+        }
+
+        .footer-title{
+            margin-bottom: 20px;
+        }
+        .icon img{
+            margin: 20px 0px 0px 15px;
+        }
+        .subscribe{
+            margin-bottom: 20px;
+        }
+
+        input{
+            padding: 15px 30px;
+            border-radius: 5px;
+            margin-bottom: 15px;
+        }
+
+        .footer-item button{
+            padding: 10px 20px;
+            border-radius: 5px;
+            color:#F15B22;
+            font-weight: 700;
+        }
